force-app/main/default/objects/Automation_setting__c/Automation_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Automation setting</label>
</CustomObject>