force-app/main/default/objects/Automation_setting__c/fields/Bypass_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Process_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Process Builders</label>
    <type>Checkbox</type>
</CustomField>