force-app/main/default/objects/Automation_setting__c/fields/Bypass_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Trigger</label>
    <type>Checkbox</type>
</CustomField>