force-app/main/default/objects/Automation_setting__c/fields/Bypass_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>